# llvm-project

./: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  HelloWorld.marep  README.md  README_MARATINE.md  SlulDriver.slul  cmake_install.cmake  libllvm-c.args  maratine.syntax.xml  maratine.tmLanguage.json  register_mart_extension.py  revert_patches.txt
.github/: new-prs-labeler.yml
.github/workflows/: multi_arch_build_portable_linux_artifacts.yml  multi_arch_build_windows_artifacts.yml  pr-code-lint.yml  rockci_multi_arch_amd_staging.yml  rockci_multi_arch_nightly.yml  setup.yml  setup_multi_arch.yml  spirv-ci-linux-amd-staging.yml  spirv-ci-windows-amd-staging.yml  spirv-ci.yml
MaratineProjectAppTemplate.marep/: HelloWorld.marep  Maraset.yaml  RAbstractallowing.xml
MaratineProjectAppTemplate.marep/MaratineProjectAppTemplate.slasset/: ResLayout.xml
MaratineProjectAppTemplate.marep/base/: HelloWorld.mara  LAPrevent.mara  OEntry.mara  TemplateView.mara
MaratineProjectAppTemplate.slul/: Maraset.yaml  RAbstractallowing.xml
MaratineProjectAppTemplate.slul/base/: APrevent.mara  OEntry.mara
amd/comgr/src/hotswap/: CMakeLists.txt  code-object-utils.cpp  code-object-utils.h  hotswap-error.cpp  hotswap-error.h  mc-state.cpp  mc-state.h  raiser.cpp  raiser.h
amd/comgr/test-unit/: CMakeLists.txt  CodeObjectUtilsTest.cpp  MCContextInlineSrcmgrTest.cpp  RaiserScaffoldingTest.cpp
base/MaratineKit/: AuthARoot.mara  BattPwrKit.mara  CycleActivity.mara  DrvInstance.mara  HealthKit.mara  NotifMgr.mara  RenRoot.mara  RenRootUI.mara  StylusKit.mara  WatchFaceKit.mara
clang/docs/: LanguageExtensions.rst  ReleaseNotes.rst
clang/test/: CMakeLists.txt  lit.cfg.py
cmake/Modules/: cmake_install.cmake
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: base-config-ix.cmake
docs/: cmake_install.cmake
flang-rt/: CMakeLists.txt
flang-rt/lib/: CMakeLists.txt
flang/docs/: Extensions.md
include/: cmake_install.cmake
include/llvm/: cmake_install.cmake
lib/: cmake_install.cmake
lib/ABI/: cmake_install.cmake
lib/Analysis/: cmake_install.cmake
lib/AsmParser/: cmake_install.cmake
lib/BinaryFormat/: cmake_install.cmake
lib/Bitcode/: cmake_install.cmake
lib/Bitstream/: cmake_install.cmake
lib/CAS/: cmake_install.cmake
lib/CGData/: cmake_install.cmake
lib/CodeGen/: cmake_install.cmake
lib/CodeGenTypes/: cmake_install.cmake
lib/DTLTO/: cmake_install.cmake
lib/DWARFCFIChecker/: cmake_install.cmake
lib/DWARFLinker/: cmake_install.cmake
lib/DWP/: cmake_install.cmake
lib/DebugInfo/: cmake_install.cmake
lib/Debuginfod/: cmake_install.cmake
lib/Demangle/: cmake_install.cmake
lib/ExecutionEngine/: cmake_install.cmake
lib/Extensions/: cmake_install.cmake
lib/FileCheck/: cmake_install.cmake
lib/Frontend/: cmake_install.cmake
lib/FuzzMutate/: cmake_install.cmake
lib/HTTP/: cmake_install.cmake
lib/IR/: cmake_install.cmake
lib/IRPrinter/: cmake_install.cmake
lib/IRReader/: cmake_install.cmake
lib/InterfaceStub/: cmake_install.cmake
lib/LTO/: cmake_install.cmake
lib/LineEditor/: cmake_install.cmake
lib/Linker/: cmake_install.cmake
lib/MC/: cmake_install.cmake
lib/MCA/: cmake_install.cmake
lib/ObjCopy/: cmake_install.cmake
lib/Object/: cmake_install.cmake
lib/ObjectYAML/: cmake_install.cmake
lib/Option/: cmake_install.cmake
lib/Passes/: cmake_install.cmake
lib/Plugins/: cmake_install.cmake
lib/ProfileData/: cmake_install.cmake
lib/Remarks/: cmake_install.cmake
lib/SandboxIR/: cmake_install.cmake
lib/Support/: cmake_install.cmake
lib/TableGen/: cmake_install.cmake
lib/TargetParser/: cmake_install.cmake
lib/Telemetry/: cmake_install.cmake
lib/TextAPI/: cmake_install.cmake
lib/ToolDrivers/: cmake_install.cmake
lib/Transforms/: cmake_install.cmake
lib/WindowsDriver/: cmake_install.cmake
lib/WindowsManifest/: cmake_install.cmake
lib/XRay/: cmake_install.cmake
libcxx/include/: optional
llvm/: CMakeLists.txt
llvm/cmake/: config-ix.cmake
llvm/docs/: AMDGPUUsage.rst  LangRef.md  LangRef.rst  conf.py
llvm/lib/Frontend/Maratine/: CMakeLists.txt  MaratineAST.cpp  MaratineAST.h  MaratineASTConsumer.h  MaratineCodeGenAction.cpp  MaratineCodeGenAction.h  MaratineEmitLLVMAction.h  MaratineFrontendAction.h  MaratineLexer.cpp  MaratineLexer.h  MaratineParser.cpp  MaratineParser.h  MaratinePlugin.cpp  MaratineSema.cpp  MaratineSema.h  MaratineToken.h
llvm/runtimes/: CMakeLists.txt
llvm/tools/: CMakeLists.txt
llvm/tools/maralang/: CMakeLists.txt  Maralang.cpp
maratine/: CMakeLists.txt  windows-clang-cl.cmake
maratine-vscode/: language-configuration.json  maratine-language-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
maratine-vscode/src/: extension.ts
maratine-vscode/syntaxes/: maratine.tmLanguage.json
maratine/include/: MaratineAST.h  MaratineCodeGen.h  MaratineLexer.h  MaratineOVC.h  MaratineParser.h  MaratineSema.h
maratine/lib/: MaratineCodeGen.cpp  MaratineLexer.cpp  MaratineOVC.cpp  MaratineParser.cpp  MaratineSema.cpp
maratine/test/: CMakeLists.txt
maratine/test/fixtures/: hello.mart
maratine/tools/: maratine-cc.cpp
maratine/tools/marabug/: CMakeLists.txt  MaraBug.cpp  MaraBugSession.cpp  MaraBugSession.h
maratine/tools/marai/: CMakeLists.txt  Marai.cpp  MaraiABI.cpp  MaraiABI.h  MaraiAudit.cpp  MaraiAudit.h  MaraiBuild.cpp  MaraiBuild.h  MaraiCheck.cpp  MaraiCheck.h  MaraiInstall.cpp  MaraiInstall.h  MaraiLSP.cpp  MaraiLSP.h  MaraiNew.cpp  MaraiNew.h
offload/liboffload/: CMakeLists.txt
offload/libomptarget/: CMakeLists.txt  omptarget.cpp
offload/test/: lit.cfg
openmp/: CMakeLists.txt
openmp/device/: CMakeLists.txt
openmp/module/: CMakeLists.txt
projects/: cmake_install.cmake
runtimes/: cmake_install.cmake
runtimes/cmake/: config-Fortran.cmake
tools/: cmake_install.cmake
tools/dsymutil/: cmake_install.cmake
tools/dxil-dis/: cmake_install.cmake
tools/gold/: cmake_install.cmake
tools/llc/: cmake_install.cmake
tools/lli/: cmake_install.cmake
tools/llubi/: cmake_install.cmake
tools/llvm-ar/: cmake_install.cmake
(+468 files in other folders)
